<resources>
    <string name="app_name">Smart Mouse</string>
    <string name="left_button_content_description">left click</string>
    <string name="right_button_content_description">right click</string>
    <string name="back_button_content_description">back</string>
    <string name="sensitivity_label">Sensitivity</string>
    <string name="button_color_label">Button Color</string>
    <string name="invert_buttons_label">Invert Mouse Buttons</string>
    <string name="haptics_label">Enable Haptics</string>
    <string name="debugging_switch_label">Show Debugging Log</string>
    <string name="settings_title_label">Settings</string>
    <string name="about_label">Version 1.0 - Developed by Fillip Cannard</string>

</resources>