<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/back_button_content_description"
                app:srcCompat="?attr/actionModeCloseDrawable" />

            <Switch
                android:id="@+id/invert_btn_switch"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/invert_buttons_label" />

            <Switch
                android:id="@+id/debug_console_switch"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/debugging_switch_label" />

            <TextView
                android:id="@+id/sensitivity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensitivity_label" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/button_color_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_color_label" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/blue"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:text=""
                    app:backgroundTint="@color/blue"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/green"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:text=""
                    app:backgroundTint="@color/green" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/purple"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:text=""
                    app:backgroundTint="@color/purple" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/yellow"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:text=""
                    app:backgroundTint="@color/yellow" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/red"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:text=""
                    app:backgroundTint="@color/red" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/gray"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:text=""
                    app:backgroundTint="@color/gray" />

            </TableRow>

        </TableLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>